Session and password hashing

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "compression": "^1.7.1",
+    "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "helmet": "^3.9.0",
     "moment": "^2.19.3",
