--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "compression": "^1.7.1",
+    "connect-busboy": "0.0.2",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-fileupload": "^0.3.0",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "helmet": "^3.9.0",
     "moment": "^2.19.3",
     "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
+    "path": "^0.12.7",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.5",
     "validator": "^9.2.0"
